# marble-live

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  backend.code-workspace  frontend.code-workspace  justfile
.claude/: settings.json
.claude/skills/polandball/: .gitignore  SKILL.md  package-lock.json  package.json  preview.mjs  render.mjs  spritesheet.mjs
.claude/skills/polandball/references/: animation-guide.md  flag-patterns.md
crates/marble-client/: Cargo.toml  index.html  style.css
crates/marble-client/src/: app.rs  camera.rs  fingerprint.rs  main.rs  ranking.rs  renderer.rs  renderer_stub.rs  routes.rs  state.rs  storage.rs
crates/marble-client/src/components/: camera_controls.rs  canvas.rs  canvas_controls.rs  chat_panel.rs  chat_panel.scss  connection_panel.rs  controls.rs  debug_log.rs  debug_panel.rs  desync_warning.rs  game_view.rs  game_view.scss  layout.rs  leaderboard.rs  leaderboard.scss  lobby_panel.rs  logo.rs  logo.scss  logo_expandable.rs  marble_editor.rs  marble_editor.scss  marble_game.rs  marble_game.scss  meatball.rs  meatball.scss  meatball_menu.rs  mod.rs  modal.rs  network_visualization.rs  peer_instance_card.rs  peer_list.rs  peer_list.scss  peer_manager.rs  peer_status.rs  player_dashboard.rs  player_dashboard.scss  player_legend.rs  reaction_display.rs  reaction_panel.rs  reaction_panel.scss  (+9 more)
crates/marble-client/src/components/editor/: context_menu.rs  context_menu.scss  editor_canvas.rs  gizmo.rs  interaction.rs  mod.rs  object_list.rs  object_list.scss  property_panel.rs  property_panel.scss  sequence_list.rs  sequence_list.scss  timeline_panel.rs  timeline_panel.scss  toolbar.rs  toolbar.scss
crates/marble-client/src/hooks/: mod.rs  use_bevy.rs  use_config.rs  use_editor_state.rs  use_fingerprint.rs  use_game_loop.rs  use_grpc_room_service.rs  use_join_room.rs  use_keyboard_shortcuts.rs  use_localstorage.rs  use_p2p_network.rs  use_p2p_room.rs  use_querystring.rs  use_room_connection.rs  use_room_info.rs  use_room_player.rs  use_room_sync.rs  use_userhash.rs
crates/marble-client/src/network/: grpc_web.rs  manager.rs  mod.rs
crates/marble-client/src/p2p/: mod.rs  protocol.rs  session.rs  state.rs  sync.rs
crates/marble-client/src/pages/: debug.rs  debug.scss  debug_conntest.rs  debug_grpc.rs  debug_index.rs  debug_p2p.rs  debug_p2p_play.rs  debug_simple.rs  editor.rs  editor.scss  home.rs  home.scss  mod.rs  not_found.rs  panic.rs  play.rs  play.scss
crates/marble-client/src/renderer/: mod.rs
crates/marble-client/src/renderer/shaders/: circle.wgsl  line.wgsl  rect.wgsl
crates/marble-client/src/services/: endpoint.rs  message_handler.rs  mod.rs
crates/marble-client/src/services/p2p/: connection_reporter.rs  game_sync.rs  gossip.rs  message_loop.rs  mod.rs  room_handle.rs  room_state.rs  topology.rs  types.rs
crates/marble-client/src/util/: callback.rs  hash.rs  mod.rs
crates/marble-client/styles/: _animations.scss  _buttons.scss  _forms.scss  _mixins.scss  _modals.scss  _reset.scss  _variables.scss  main.scss
crates/marble-core/: Cargo.toml
crates/marble-core/maps/: default.json
crates/marble-core/src/: context_game.rs  context_keyframe.rs  dsl.rs  expr.rs  game.rs  keyframe.rs  lib.rs  map.rs  marble.rs  physics.rs  sync.rs  util.rs
crates/marble-core/src/bevy/: components.rs  events.rs  gossip.rs  mod.rs  p2p_socket.rs  plugin.rs  rapier_plugin.rs  resources.rs  state_store.rs  sync_snapshot.rs  test_utils.rs  wasm_entry.rs
crates/marble-core/src/bevy/systems/: command.rs  game_rules.rs  keyframe.rs  map_loader.rs  marble.rs  mod.rs  p2p_sync.rs  physics.rs  preview.rs  rendering.rs  simulation.rs  state_sync.rs
crates/marble-core/src/bevy/systems/camera/: editor.rs  follow.rs  mod.rs  overview.rs
crates/marble-core/src/bevy/systems/editor/: gizmo.rs  input.rs  mod.rs  selection.rs  snap.rs
crates/marble-proto/: Cargo.toml  build.rs
crates/marble-proto/src/: lib.rs
crates/marble-server/: Cargo.toml  build.rs
crates/marble-server/src/: main.rs  room_service.rs  room_state.rs
crates/marble-server/src/common/: mod.rs  player.rs  room.rs
crates/marble-server/src/handler/: avatar_service.rs  jwt.rs  map_service.rs  mod.rs  room_service.rs  user_service.rs
crates/marble-server/src/service/: database.rs
crates/marble-server/src/topology/: bridge.rs  manager.rs  mesh_group.rs  mod.rs
crates/marble-server/src/util/: mod.rs
docs/: conventions.md  dev-setup.md  issues.md  links.md  p2p-sync.md
maps/: default.json
proto/: avatar.proto  game.proto  map.proto  play.proto  room.proto  user.proto
tests/k6/: avatar.js  map.js  room.js  scenario.js  user.js
tests/k6/helpers/: auth.js  config.js  data.js  grpc.js
