[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/egoavara/marble-live"

[workspace.dependencies]
# Internal crates
marble-core = { path = "crates/marble-core" }
marble-proto = { path = "crates/marble-proto" }

# Physics
rapier2d = { version = "0.32", features = ["enhanced-determinism", "serde-serialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC / Protobuf
tonic = "0.14"
tonic-web = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Frontend
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
gloo = "0.11"

# WebRTC P2P
matchbox_socket = "0.13"
matchbox_signaling = "0.13"

# RNG (deterministic)
rand = "0.9"
rand_chacha = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2"

# WASM utilities
console_error_panic_hook = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
http = "1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
