[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/egoavara/marble-live"

[workspace.dependencies]
# Internal crates
marble-core = { path = "crates/marble-core" }
marble-proto = { path = "crates/marble-proto" }

# Physics
rapier2d = { version = "0.32", features = [
    "enhanced-determinism",
    "serde-serialize",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# gRPC / Protobuf
tonic = "0.14"
tonic-web = "0.14"
prost = "0.14"
tonic-web-wasm-client = "0.8.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Frontend
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
yew_icons = { version = "0.9", features = ["lucide"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
js-sys = "0.3"
gloo = "0.11"

# WebRTC P2P
matchbox_socket = "0.13"
matchbox_signaling = "0.13"

# RNG (deterministic)
rand = "0.9"
rand_chacha = { version = "0.9", features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-web = "0.1"

# WASM utilities
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
http = "1"

# Static file embedding
rust-embed = { version = "8.11", features = ["axum"] }
mime_guess = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CEL expression language
cel = "0.12"

# Graphics
wgpu = { version = "28", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }

# Bevy Game Engine
# NOTE: bevy_winit and webgpu are NOT included here.
# They are activated via marble-core's "windowed" feature flag,
# which marble-client enables. This allows marble-core to build
# and run headless tests on native without winit.
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_mesh",
    "bevy_state",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_text",
    "default_font",
] }


[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
