[package]
name = "marble-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core physics and game logic for marble-live"

[lints]
workspace = true

[dependencies]
rapier2d.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
