[package]
name = "marble-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core physics and game logic for marble-live"

[lints]
workspace = true

[dependencies]
# Existing dependencies
rapier2d.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
cel.workspace = true
parking_lot.workspace = true
tracing.workspace = true

# Bevy dependencies
bevy.workspace = true

# P2P sync dependencies
marble-proto.workspace = true
prost.workspace = true
uuid.workspace = true

[features]
## Enables bevy_winit + webgpu for windowed rendering.
## Activated by marble-client; omitted for headless tests.
windowed = ["bevy/bevy_winit", "bevy/webgpu"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true
matchbox_socket.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
