[package]
name = "marble-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protobuf definitions and generated code for marble-live"

[lints]
workspace = true

[features]
default = []
client = ["tonic", "tonic-prost"]
server = ["tonic", "tonic-prost", "tonic/transport"]

[dependencies]
prost.workspace = true
tonic = { version = "0.14", default-features = false, features = ["codegen"], optional = true }
tonic-prost = { version = "0.14", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"
