[package]
name = "marble-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum backend server for marble-live"

[lints]
workspace = true

[dependencies]
marble-proto = { workspace = true, features = ["server"] }

axum.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
