[package]
name = "marble-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum backend server for marble-live"

[lints]
workspace = true

[dependencies]
marble-proto = { workspace = true, features = ["server"] }

axum.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
matchbox_signaling.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
parking_lot.workspace = true
http.workspace = true
rand.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
